// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`categoriesDetailsSection > should render categories details and add "✅" when isBinary is passing 1`] = `
"## 🏷 Categories

### Bug Prevention

🟢 Score: **100** ✅

- 🟩 [No let](#no-let-eslint) (_Eslint_) - **5**
"
`;

exports[`categoriesDetailsSection > should render categories details and add "❌" when isBinary is failing 1`] = `
"## 🏷 Categories

### Bug Prevention

🟢 Score: **98** ❌

- 🟥 [No let](#no-let-eslint) (_Eslint_) - **5**
"
`;

exports[`categoriesDetailsSection > should render complete categories details 1`] = `
"## 🏷 Categories

### Bug Prevention

🟢 Score: **100** ✅

- 🟥 [No let](#no-let-eslint) (_Eslint_) - **5**

### Performance

🟡 Score: **74**

- 🟨 [Largest Contentful Paint](#largest-contentful-paint-lighthouse) (_Lighthouse_) - **2905**

### Typescript

🔴 Score: **14** ❌

- 🟩 [No any](#no-any-eslint) (_Eslint_) - **0**
"
`;

exports[`categoriesDetailsSection > should render filtered categories details > filtered 1`] = `
"## 🏷 Categories

### Bug Prevention

🟢 Score: **100** ✅

- 🟩 [No let](#no-let-eslint) (_Eslint_) - **0**
"
`;

exports[`categoriesOverviewSection > should render complete categories table 1`] = `
"| 🏷 Category                       |  ⭐ Score  | 🛡 Audits |
| :-------------------------------- | :-------: | :-------: |
| [Bug Prevention](#bug-prevention) | 🟢 **98** |     1     |
| [Performance](#performance)       | 🟡 **74** |     1     |
| [Typescript](#typescript)         | 🔴 **14** |     1     |
"
`;

exports[`categoriesOverviewSection > should render filtered categories table 1`] = `
"| 🏷 Category                       |  ⭐ Score   | 🛡 Audits |
| :-------------------------------- | :--------: | :-------: |
| [Bug Prevention](#bug-prevention) | 🟢 **100** |     1     |
"
`;

exports[`categoriesOverviewSection > should render scoreTarget icon "❌" if score fails 1`] = `
"| 🏷 Category                       |   ⭐ Score   | 🛡 Audits |
| :-------------------------------- | :---------: | :-------: |
| [Bug Prevention](#bug-prevention) | 🟢 **98** ❌ |     1     |
"
`;

exports[`categoryGroupItem > should render complete category reference 1`] = `
"- 🟡 Bug Prevention (_Eslint_)
  - 🟥 [No any](#no-any-eslint) - **12 errors**
  - 🟩 [No let](#no-let-eslint) - **0**"
`;

exports[`categoryGroupItem > should render partial category reference 1`] = `
"- 🟢 Bug Prevention (_Eslint_)
  - 🟥 [No let](#no-let-eslint) - **23**
  - 🟨 [No any](#no-any-eslint) - **91**"
`;
